name:                super-pong
version:             0.1.0.0
author:              Anatoly Kim
build-type:          Simple
cabal-version:       >=1.10

executable pong
  main-is:             Main.hs
  ghc-options:        -Wall
  build-depends:       base >=4.8 && <4.9
                     , GLFW-b == 1.4.7.2
                     , gloss == 1.9.3.1
                     , gloss-rendering == 1.9.3.1
                     , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  ghc-options:       -Wall
  build-depends:       base >=4.8 && <4.9
                     , GLFW-b == 1.4.7.2
                     , gloss == 1.9.3.1
                     , gloss-rendering == 1.9.3.1
                     , containers
                     , bytestring
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
